5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1671_1107.log
== TEST (2019-04-24 15:50:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d=int(input("Digite o dia: "))
if(d>=0 and d<=6):
	a = int(input("Digite os dias futuros: "))
	f=(d+a)%7
	if(d==0):
		d="domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d="terca"
	elif(d==3):
		d="quarta"
	elif(d==4):
		d="quinta"
	elif(d==5):
		d="sexta"
	else:
		d="sabado"
	
	if(f==0):
	f="domingo"
	elif(f==1):
		f="segunda"
	elif(f==2):
		f="terca"
	elif(f==3):
		f="quarta"
	elif(f==4):
		f="quinta"
	elif(f==5):
		f="sexta"
	else:
		f="sabado"
	print("Hoje eh", d, "e o dia futuro eh", f)
print("A entrada",d, "eh invalida")
		
-- ERROR:
File "XXXX", line 24
    f="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:50:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d=int(input("Digite o dia: "))
if(d>=0 and d<=6):
	a = int(input("Digite os dias futuros: "))
	f=(d+a)%7
	if(d==0):
		d="domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d="terca"
	elif(d==3):
		d="quarta"
	elif(d==4):
		d="quinta"
	elif(d==5):
		d="sexta"
	else:
		d="sabado"
	
	if(f==0):
	f="domingo"
	elif(f==1):
		f="segunda"
	elif(f==2):
		f="terca"
	elif(f==3):
		f="quarta"
	elif(f==4):
		f="quinta"
	elif(f==5):
		f="sexta"
	else:
		f="sabado"
	print("Hoje eh", d, "e o dia futuro eh", f)
print("A entrada",d, "eh invalida")
		
-- ERROR:
File "XXXX", line 24
    f="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:50:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d=int(input("Digite o dia: "))
if(d>=0 and d<=6):
	a = int(input("Digite os dias futuros: "))
	f=(d+a)%7
	if(d==0):
		d="domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d="terca"
	elif(d==3):
		d="quarta"
	elif(d==4):
		d="quinta"
	elif(d==5):
		d="sexta"
	else:
		d="sabado"
	
	if(f==0):
	f="domingo"
	elif(f==1):
		f="segunda"
	elif(f==2):
		f="terca"
	elif(f==3):
		f="quarta"
	elif(f==4):
		f="quinta"
	elif(f==5):
		f="sexta"
	else:
		f="sabado"
	print("Hoje eh", d, "e o dia futuro eh", f)
print("A entrada",d, "eh invalida")
		
-- ERROR:
File "XXXX", line 24
    f="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:51:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d=int(input("Digite o dia: "))
if(d>=0 and d<=6):
	a = int(input("Digite os dias futuros: "))
	f=(d+a)%7
	if(d==0):
		d="domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d="terca"
	elif(d==3):
		d="quarta"
	elif(d==4):
		d="quinta"
	elif(d==5):
		d="sexta"
	else:
		d="sabado"
	
	if(f==0):
	f="domingo"
	elif(f==1):
		f="segunda"
	elif(f==2):
		f="terca"
	elif(f==3):
		f="quarta"
	elif(f==4):
		f="quinta"
	elif(f==5):
		f="sexta"
	else:
		f="sabado"
	print("Hoje eh", d, "e o dia futuro eh", f)
print("A entrada",d, "eh invalida")
		
-- EXECUTION TIME:
0.21042
-- ERROR:
  File "/home/codebench/codes/1671/1107/main.py", line 24
    f="domingo"
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:51:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d=int(input("Digite o dia: "))
if(d>=0 and d<=6):
	a = int(input("Digite os dias futuros: "))
	f=(d+a)%7
	if(d==0):
		d="domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d="terca"
	elif(d==3):
		d="quarta"
	elif(d==4):
		d="quinta"
	elif(d==5):
		d="sexta"
	else:
		d="sabado"
	
	if(f==0):
	f="domingo"
	elif(f==1):
		f="segunda"
	elif(f==2):
		f="terca"
	elif(f==3):
		f="quarta"
	elif(f==4):
		f="quinta"
	elif(f==5):
		f="sexta"
	else:
		f="sabado"
	print("Hoje eh", d, "e o dia futuro eh", f)
print("A entrada",d, "eh invalida")
		
-- ERROR:
File "XXXX", line 24
    f="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:54:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d=int(input("Digite o dia: "))
if(d>=0 and d<=6):
	a = int(input("Digite os dias futuros: "))
	f=(d+a)%7
	if(d==0):
		d="domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d="terca"
	elif(d==3):
		d="quarta"
	elif(d==4):
		d="quinta"
	elif(d==5):
		d="sexta"
	else:
		d="sabado"
	
	if(f==0):
		f="domingo"
	elif(f==1):
		f="segunda"
	elif(f==2):
		f="terca"
	elif(f==3):
		f="quarta"
	elif(f==4):
		f="quinta"
	elif(f==5):
		f="sexta"
	else:
		f="sabado"
	print("Hoje eh", d, "e o dia futuro eh", f)
	print("A entrada",d, "eh invalida")
		
-- ERROR:
File "XXXX", line 24
    f="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:55:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d=int(input("Digite o dia: "))
if(d>=0 and d<=6):
	a = int(input("Digite os dias futuros: "))
	f=(d+a)%7
	if(d==0):
		d="domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d="terca"
	elif(d==3):
		d="quarta"
	elif(d==4):
		d="quinta"
	elif(d==5):
		d="sexta"
	else:
		d="sabado"
	
	if(f==0):
		f="domingo"
	elif(f==1):
		f="segunda"
	elif(f==2):
		f="terca"
	elif(f==3):
		f="quarta"
	elif(f==4):
		f="quinta"
	elif(f==5):
		f="sexta"
	else:
		f="sabado"
	print("Hoje eh", d, "e o dia futuro eh", f)
else:
	print("A entrada",d, "eh invalida")
		
-- EXECUTION TIME:
0.161403
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
